--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "086a6abe",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root groups/datasets in 'datasets/ACDC/ACDC_training_slices/patient001_frame01_slice_0.h5':\n",
+      "Root groups/datasets in 'datasets/ACDC/ACDC_training_SAM_PL_iteration1/patient001_frame01_slice_0.h5':\n",
+      "  - SAM_PL: Dataset\n",
       "  - image: Dataset\n",
       "  - label: Dataset\n",
       "  - scribble: Dataset\n",
       "\n",
       "Detailed structure:\n",
+      "Dataset: SAM_PL\n",
+      "  shape: (256, 216)\n",
+      "  dtype: uint8\n",
       "Dataset: image\n",
       "  shape: (256, 216)\n",
       "  dtype: float32\n",
@@ -24,7 +28,7 @@
       "  dtype: uint8\n",
       "Dataset: scribble\n",
       "  shape: (256, 216)\n",
-      "  dtype: uint16\n"
+      "  dtype: uint8\n"
      ]
     }
    ],
@@ -55,7 +59,7 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    # Thay 'your_file.h5' bằng đường dẫn tới file của bạn\n",
-    "    explore_h5('datasets/ACDC/ACDC_training_slices/patient001_frame01_slice_0.h5')\n"
+    "    explore_h5('datasets/ACDC/ACDC_training_SAM_PL_iteration1/patient001_frame01_slice_0.h5')\n"
    ]
   },
   {
